--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -13,4 +13,6 @@
 @import "modules/_feature-item.css";
 @import "modules/_testimonial.css";
 @import "modules/_sprite.css";
-@import "modules/_site-footer.css"
+@import "modules/_site-footer.css";
+@import "modules/_site-header.css";
+@import "modules/_primary-nav.css";
